Fixed alignment on cards

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -130,7 +130,7 @@ h2.block-msg {
     }
 
     i.fas.fa-users::before{
-        font-size: 40px;!important;
+        font-size: 50px;!important;
     }
 
     .top-fold {
